--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-basic-auth": "^1.1.6",
     "isomorphic-unfetch": "^3.0.0",
     "mysql": "^2.16.0",
     "next": "^7.0.2",
