--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "mysql": "^2.16.0",
     "next": "^7.0.2",
+    "next-routes": "^1.4.2",
+    "pm2": "^3.2.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "routes": "^2.1.0"
